[package]
name = "cli"
version = "0.1.0"
authors = ["Cedric Lefebvre <clefebvre@talentnet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
serde_yaml = "0.8.17"
serde = { version = "1.0.124", features = ["derive"] }
