[package]
name = "atlan"
version = "0.1.0"
authors = ["Cedric Lefebvre <lefebvre.cedric@outlook.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
serde_yaml = "0.8.17"
serde = { version = "1.0.124", features = ["derive"] }
dirs = "3.0.1"
ansi_term = "0.12"
